--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.8",
     "graphql": "^16.3.0",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^13.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "@types/react": "17.0.40",
     "autoprefixer": "^10.4.4",
     "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
+    "eslint-config-next": "^13.0.2",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
