--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@apollo/client": "^3.5.10",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@tanstack/react-query": "^4.14.5",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.8",
     "graphql": "^16.3.0",
+    "graphql-request": "^5.0.0",
+    "jotai": "^1.9.1",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
